--- a/Capstone_Project.ipynb
+++ b/Capstone_Project.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "Hello Capstone Project Course!\n"
      ]
     }
    ],
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "print(\"Hello World\")\n"
+    "print(\"Hello Capstone Project Course!\")\n"
    ]
   },
   {
